# saashouse

./: README.md  analyze_colors.py  analyze_colors2.py  docker-compose.prod.yml  docker-compose.yml  ocr_out.txt  ocr_out2.txt  ocr_results.txt  prompt_perancangan.md
backend/: .gitignore  Cargo.toml  Dockerfile  analyze_lock.py  audit.toml  backend_logs.txt  check_db.js  check_err.txt  check_errors.txt  check_errors_2.txt  check_errors_3.txt  check_json.txt  check_output.txt  clear_db.sql  errors.txt  errors_utf8.txt  find_parents.py  fix_dotenv.py  fix_tests_dotenv.py  fix_typo.py  full_errors.txt  full_verbose_errors.txt  reset_database.sql  test_check_output.txt  test_errors.txt  test_output.txt
backend/.sqlx/: query-04451ef82799d53d2311a512e323a82783879528d89e184c90040b550aff7b07.json  query-08ccd67f9378f05525f3d1c8c06034467e5d95ce9c3aca035cd96c479d429468.json  query-0912d504fde6d917bdfca4ba05a64f77128bd60c92f3b245addb941788befe2d.json  query-0be89cca92718f0919dcdf7aea0a20ffc4f4465e08541cf2c2c1008f187648d5.json  query-0c16e4b09455e79b709ee4c4654cb90408a7b43593234116c514ffb7395daab3.json  query-0d9eb7f13df96884d181d7ab4d9c6ac5fa7afbd4a2b4c6adfdcca819596f426a.json  query-0e1338547c60043be812b1e8dd617b75e2b9a24138c7804c157c6a3769860b69.json  query-11f0fc4f3484fafbd4b77f25578e2f591c801d3479dd6bb5d15b708f098df467.json  query-143f2f98d835f0fc80aaf2c82a794ea6a53e7a98e25fad55c0656e0457d15d5f.json  query-15c208a52170c518fd599c05d0f0a1c7a4401d6fc962ae384c786302e47a251c.json  query-16a72cfeb1063e0d56aadddfcbcde9f7caaf49f3188bed1a7aa1b31755017f14.json  query-193d6be3b6976466c02eb6c76b5f9c4cb7f1efb039a515e2d546deb6ca9f5478.json  query-19c33b5716c5d2b59ae7c5722c651ec8410a5b1ca3a51ddc8a2533dfe7b0721c.json  query-1c05e79233d59b48dd37ad2768403d36118f423f3e196d348bad9174e6a0a3a7.json  (+131 more)
backend/scratch/: check_enums.rs  (+13 more)
(+169 files in other folders)
